--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,5 @@
-
-
-
-<!--changes done to pom.xml file-->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
@@ -37,14 +33,13 @@
   <build>
     <plugins>
       <plugin>
-  <artifactId>maven-compiler-plugin</artifactId>
-  <version>3.8.1</version> 
-  <configuration>
-    <source>17</source>  
-    <target>17</target>
-  </configuration>
-</plugin>
-
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
@@ -60,28 +55,22 @@
             <plugin>
               <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
-
             <plugin>
               <artifactId>maven-jxr-plugin</artifactId>
             </plugin>
-
             <plugin>
               <artifactId>maven-javadoc-plugin</artifactId>
             </plugin>
-
             <plugin>
               <artifactId>maven-pmd-plugin</artifactId>
             </plugin>
-
             <plugin>
               <artifactId>maven-surefire-report-plugin</artifactId>
             </plugin>
-
             <plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>findbugs-maven-plugin</artifactId>
             </plugin>
-
             <plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>taglist-maven-plugin</artifactId>
@@ -99,10 +88,9 @@
         </plugin>
 
         <plugin>
-  <artifactId>maven-compiler-plugin</artifactId>
-  <version>3.8.1</version>
-</plugin>
-
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+        </plugin>
 
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
@@ -165,6 +153,13 @@
           <groupId>org.mortbay.jetty</groupId>
           <artifactId>jetty-maven-plugin</artifactId>
           <version>8.0.0.M1</version>
+        </plugin>
+
+        <!-- ✅ Added the updated WAR plugin version -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.3.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
